# spry-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: BlinnPhongExample.cpp  CMakeLists.txt  ShapeRendering.cpp  main.cpp
include/glad/: glad.h
renderer/: BlinnPhongRenderer.cpp  BlinnPhongRenderer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DefaultScene.cpp  DefaultScene.hpp  DirLight.cpp  DirLight.hpp  Drawable.hpp  Font.cpp  Font.hpp  FontRenderer.cpp  FontRenderer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FullShader.cpp  FullShader.hpp  HeightMapGenerator.cpp  HeightMapGenerator.hpp  IndexedVAO.cpp  IndexedVAO.hpp  Line.cpp  Line.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PointLight.cpp  PointLight.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  TerrainMeshGenerator.cpp  TerrainMeshGenerator.hpp  Texture.cpp  Texture.hpp  (+9 more)
renderer/gl/: Camera.hpp  CubeMap.cpp  CubeMap.hpp  EquirectangularSkyMap.cpp  EquirectangularSkyMap.hpp  FontRenderer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexedVAO.cpp  IndexedVAO.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  RenderBuffer.hpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureRenderTarget.cpp  TextureRenderTarget.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VAO.hpp  Window.cpp
renderer/shapes/: Cuboid.cpp  Cuboid.hpp  Line.cpp  Line.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
renderer/utils/: DebugTextureViewer.cpp  DebugTextureViewer.hpp  DefaultAxes.cpp  DefaultAxes.hpp  DefaultScene.cpp  DefaultScene.hpp  Entity.cpp  Entity.hpp  FontManager.cpp  FontManager.hpp  FullScreenQuad.cpp  FullScreenQuad.hpp  ImGuiViews.cpp  ImGuiViews.hpp  Materials.hpp  RenderPass.hpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureViewer.cpp  TextureViewer.hpp  Timer.cpp  Timer.hpp  Toggle.cpp  Toggle.hpp
res/shaders/: DirShadow.frag  Font.frag  Font.vert  HeightMap.frag  HeightMap.tessctl.glsl  HeightMap.tesseval.glsl  HeightMap.vert  Lighting.frag  Lighting.vert  Line.frag.glsl  Line.vert.glsl  Model.frag  Model.vert  OmniDirectionalShadow.frag  OmniDirectionalShadow.geom  OmniDirectionalShadow.vert  PerspectiveProjection.frag  ScreenSpace.frag  ScreenSpace.vert  Shadow.frag  Shadow.vert  Shape.frag  Shape.geom  Shape.vert  Skybox.frag  Skybox.vert  Test.frag  Test.vert  Tetrahedron.frag.glsl  Tetrahedron.vert  Tetrahedron.vert.glsl  Textured.frag  Textured.vert  Textured.vert.glsl
shader-editor/: CMakeLists.txt  RenderQuad.cpp  RenderQuad.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  TextEditor.cpp  Window.cpp  Window.hpp  main.cpp
src/: BlinnPhongExample.cpp  ModelLoading.cpp  RenderingExample.cpp  SceneTree.cpp  ShapeRendering.cpp  Test.cpp  Test2.cpp  main.cpp
